Fix layout issue of gallery overlapping header.

--- a/index.html
+++ b/index.html
@@ -9,13 +9,28 @@
     <div id="header">
         <h1>Positive Plant</h1>
     </div>
-    <div class="imageAndCaption">
-      <div class="image">
-        <img id="succ" src="img/succulent.png">
-        <div id="caption">
-          <p>When life succs, start a garden.</p>
-        </div>
+  <div id="wrap">
+    <div id="main">
+      <img src="img/succulent.png">
+      <div id="caption">
+        <p>When life succs, start a garden.</p>
       </div>
+    </div>
+    <div id="gallery">
+      <ul>
+        <li><img src="img/succulent1.jpg"></li>
+        <li><img src="img/succulent2.jpg"></li>
+        <li><img src="img/succulent3.jpg"></li>
+        <li><img src="img/succulent4.jpg"></li>
+        <li><img src="img/succulent5.jpg"></li>
+        <li><img src="img/succulent6.jpg"></li>
+        <li><img src="img/succulent7.jpg"></li>
+        <li><img src="img/succulent8.jpg"></li>
+        <li><img src="img/succulent9.jpg"></li>
+      </ul>
+    </div>
+  </div>
+    <div id="divider">
     </div>
   </body>
 </html>
