--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <div id="header">
         <h1>Positive Plant</h1>
     </div>
-  <div id="wrap">
+  <div id="full">
     <div id="main">
       <img src="img/succulent.png">
       <div id="caption">
-        <p>When life succs, start a garden.</p>
+        <p>When life succs, <br><span id="startGarden">start a garden.</span></p>
       </div>
     </div>
     <div id="gallery">
@@ -30,7 +30,54 @@
       </ul>
     </div>
   </div>
-    <div id="divider">
+  <div id="divider">
+  </div>
+  <div id="bottomHalf">
+    <div class="form">
+      <form>
+        <div id="formHeader">
+          <h1>Sign up for our Newsletter!</h1>
+        </div>
+        <div id="name">
+          <label for="firstName" id="labelFirst">First Name: </label>
+          <input type="text" id="firstName" name="firstName">
+          <label for="lastName">Last Name: </label>
+          <input type="text" id="lastName" name="lastName">
+        </div>
+        <div id="email">
+          <label for="email">Email: </label>
+          <input type="text" id="emailInput" name="email">
+        </div>
+        <div id="formDivider">
+        </div>
+        <div id="textbox">
+          <textarea id="msg" name="user_message">Write any comments here!</textarea>
+        </div>
+        <div class="button">
+          <button type="submit" id="submitButton">Submit!</button>
+        </div>
+      </form>
     </div>
+  <div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
   </body>
 </html>
