Change name of site and begin description.

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Quattrocento+Sans" rel="stylesheet">
-    <title>Positive Plant</title>
+    <title>Succulent Space</title>
   </head>
   <body>
     <div id="header">
-        <h1>Positive Plant</h1>
+        <h1>Succulent Space</h1>
     </div>
   <div id="full">
     <div id="main">
@@ -58,8 +58,12 @@
         </div>
       </form>
     </div>
+    <div class="description">
+      <h2>We're so excited you're here, we wet our plants!</h2>
+      <p>Succulents are life, that's a pretty universal statement.</p>
+      <p>So come pick yours up today! They're super easy to maintain so you don't have to worry about killing them (just water them every couple weeks and let them soak up some sunchine).</p>
+    </div>
   <div>
-
 
 
 
