finish writing description.

--- a/index.html
+++ b/index.html
@@ -9,79 +9,60 @@
     <div id="header">
         <h1>Succulent Space</h1>
     </div>
-  <div id="full">
-    <div id="main">
-      <img src="img/succulent.png">
-      <div id="caption">
-        <p>When life succs, <br><span id="startGarden">start a garden.</span></p>
+    <div id="full">
+      <div id="main">
+        <img src="img/succulent.png">
+        <div id="caption">
+          <p>When life succs, <br><span id="startGarden">start a garden.</span></p>
+        </div>
+      </div>
+      <div id="gallery">
+        <ul>
+          <li><img src="img/succulent1.jpg"></li>
+          <li><img src="img/succulent2.jpg"></li>
+          <li><img src="img/succulent3.jpg"></li>
+          <li><img src="img/succulent4.jpg"></li>
+          <li><img src="img/succulent5.jpg"></li>
+          <li><img src="img/succulent6.jpg"></li>
+          <li><img src="img/succulent7.jpg"></li>
+          <li><img src="img/succulent8.jpg"></li>
+          <li><img src="img/succulent9.jpg"></li>
+        </ul>
       </div>
     </div>
-    <div id="gallery">
-      <ul>
-        <li><img src="img/succulent1.jpg"></li>
-        <li><img src="img/succulent2.jpg"></li>
-        <li><img src="img/succulent3.jpg"></li>
-        <li><img src="img/succulent4.jpg"></li>
-        <li><img src="img/succulent5.jpg"></li>
-        <li><img src="img/succulent6.jpg"></li>
-        <li><img src="img/succulent7.jpg"></li>
-        <li><img src="img/succulent8.jpg"></li>
-        <li><img src="img/succulent9.jpg"></li>
-      </ul>
+    <div id="divider">
     </div>
-  </div>
-  <div id="divider">
-  </div>
-  <div id="bottomHalf">
-    <div class="form">
-      <form>
-        <div id="formHeader">
-          <h1>Sign up for our Newsletter!</h1>
-        </div>
-        <div id="name">
-          <label for="firstName" id="labelFirst">First Name: </label>
-          <input type="text" id="firstName" name="firstName">
-          <label for="lastName">Last Name: </label>
-          <input type="text" id="lastName" name="lastName">
-        </div>
-        <div id="email">
-          <label for="email">Email: </label>
-          <input type="text" id="emailInput" name="email">
-        </div>
-        <div id="formDivider">
-        </div>
-        <div id="textbox">
-          <textarea id="msg" name="user_message">Write any comments here!</textarea>
-        </div>
-        <div class="button">
-          <button type="submit" id="submitButton">Submit!</button>
-        </div>
-      </form>
-    </div>
-    <div class="description">
-      <h2>We're so excited you're here, we wet our plants!</h2>
-      <p>Succulents are life, that's a pretty universal statement.</p>
-      <p>So come pick yours up today! They're super easy to maintain so you don't have to worry about killing them (just water them every couple weeks and let them soak up some sunchine).</p>
-    </div>
-  <div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    <div id="bottomHalf">
+      <div class="form">
+        <form>
+          <div id="formHeader">
+            <h1>Sign up for our Newsletter!</h1>
+          </div>
+          <div id="name">
+            <label for="firstName" id="labelFirst">First Name: </label>
+            <input type="text" id="firstName" name="firstName">
+            <label for="lastName">Last Name: </label>
+            <input type="text" id="lastName" name="lastName">
+          </div>
+          <div id="email">
+            <label for="email">Email: </label>
+            <input type="text" id="emailInput" name="email">
+          </div>
+          <div id="formDivider">
+          </div>
+          <div id="textbox">
+            <textarea id="msg" name="user_message">Write any comments here!</textarea>
+          </div>
+          <div class="button">
+            <button type="submit" id="submitButton">Submit!</button>
+          </div>
+        </form>
+      </div>
+      <div class="description">
+        <h2> We're so excited you're here, we wet our plants!</h2>
+        <p>Succulents are life, that's a pretty universal statement. Succulents come in all different shapes, sizes and colors; like blue, green, red, pink yellow, and more! They can live pretty much anywhere, they're like that super cool friend who's just down to have a good time. Their name comes from the Latin word "sucus," which means juice or sap since that's what their leaves are filled with. They originate in dry climates so they need all of that sap to keep them going during those long dry spells. All cacti are succulents, but not all succulents are cacti. They're also generally pest resistant too, so you don't have to worry about creepy critters eating them.</p>
+        <p>Come pick yours up today! They're super easy to maintain so you don't have to worry about killing them (just water them every couple weeks and let them soak up some sunshine).</p>
+      </div>
+    <div>
   </body>
 </html>
