--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </div>
       <div class="description">
         <h2> We're so excited you're here, we wet our plants!</h2>
-        <p>Succulents are life, that's a pretty universal statement. Succulents come in all different shapes, sizes and colors; like blue, green, red, pink yellow, and more! They can live pretty much anywhere, they're like that super cool friend who's just down to have a good time. Their name comes from the Latin word "sucus," which means juice or sap since that's what their leaves are filled with. They originate in dry climates so they need all of that sap to keep them going during those long dry spells. All cacti are succulents, but not all succulents are cacti. They're also generally pest resistant too, so you don't have to worry about creepy critters eating them.</p>
+        <p>Succulents are life, that's a pretty universal statement. Succulents come in all different shapes, sizes and colors; like blue, green, red, pink yellow, and more! They can live pretty much anywhere, they're like that super cool friend who's just down to have a good time. Their name comes from the Latin word "sucus," which means juice or sap since that's what their leaves are filled with. They originate in dry climates so they need all of that sap to keep them going during those long dry spells. All cacti are succulents, but not all succulents are cacti. They're also generally pest resistant too, no creepy critters here to eat them up.</p>
         <p>Come pick yours up today! They're super easy to maintain so you don't have to worry about killing them (just water them every couple weeks and let them soak up some sunshine).</p>
       </div>
     <div>
